fix: Border radius clipping in sliders

--- a/packages/uhk-web/src/styles/_global.scss
+++ b/packages/uhk-web/src/styles/_global.scss
@@ -90,6 +90,7 @@ a.disabled {
 .noUi {
     &-base {
         background-color: var(--color-slider-base-bg);
+        border-radius: 4px;
     }
 
     &-handle {
